retinify icon, other fixes for mobile
* add retina icon
* add fix for images and iframes overflowing on mobile

--- a/public/styles/base.styl
+++ b/public/styles/base.styl
@@ -21,3 +21,7 @@ a, a:link, a:visited {
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 }
+
+code, img, iframe {
+	max-width: 100%;
+}
