--- a/public/styles/module.styl
+++ b/public/styles/module.styl
@@ -33,3 +33,11 @@ nav {
 		}
 	}
 }
+
+i.logo {
+	background-image: url(/images/beef_nick_small@2x.png);
+	width: 30px;
+	height: 32px;
+	display: inline-block;
+	background-size: 100%;
+}
